# adk-sim-plugin

./: .dockerignore  .gitignore  .pre-commit-config.yaml  :memory:?cache=shared  CLAUDE.md  Makefile  README.md  buf.gen.python.yaml  buf.gen.yaml  buf.yaml  conftest.py  docker-compose.e2e.yaml  docker-compose.test.yaml  docker-compose.yaml  jj-config.toml  package-lock.json  package.json  pyproject.toml
.changeset/: config.json
.claude/: settings.json  settings.local.json
.claude/skills/angular-expert/: SKILL.md
.claude/skills/jujutsu/: SKILL.md
.claude/skills/markdown-docs/: SKILL.md  conventions.md  requirements.txt
.claude/skills/sprint-orchestration/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json  init.sh  post-start.sh
.github/: dependabot.yml  sync-claude-agents.sh
.github/agents/: adk-unit-test.agent.md  copilot-instructions.md  create-agent.agent.md  devplatform-engineer.agent.md  frontend-sprint-plan.agent.md  speckit.analyze.agent.md  speckit.implement.agent.md  speckit.orchestrator.agent.md  speckit.plan.agent.md  speckit.tasks.agent.md  sprint-implement.agent.md  sprint-orchestrate.agent.md
.github/prompts/: speckit.orchestrator.prompt.md
.github/workflows/: build-image.yaml  ci.yaml  codeql.yml  e2e.yaml  frontend-tests.yaml  publish.yaml  tag-release.yaml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
adk-samples/fomc-research/: README.md  pyproject.toml  replay.json  run.sh  run_with_recorder.py  run_with_simulator.py  vertex_debug.json
adk-samples/fomc-research/deployment/: bigquery_setup.py  deploy.py  test_deployment.py
adk-samples/fomc-research/fomc_research/: .gitignore  __init__.py  agent.py
adk-samples/fomc-research/fomc_research/shared_libraries/: callbacks.py  file_utils.py  price_utils.py
adk-samples/fomc-research/fomc_research/sub_agents/: analysis_agent.py  extract_page_data_agent.py  research_agent.py  retrieve_meeting_data_agent.py  summarize_meeting_agent.py
adk-samples/fomc-research/fomc_research/tools/: compare_statements.py  compute_rate_move_probability.py  fetch_page.py  fetch_transcript.py  store_state.py
adk_agent_sim/: __init__.py  betterproto_patch.py  settings.py
adk_agent_sim/persistence/: __init__.py  core.py  database.py  event_repo.py  session_repo.py
adk_agent_sim/plugin/: client.py  client_factory.py  converter.py  core.py  futures.py
adk_agent_sim/server/: broadcaster.py  main.py  queue.py  session_manager.py
adk_agent_sim/server/services/: simulator_service.py
docker/: backend.Dockerfile  frontend.Dockerfile
docs/: adk-sim-java-plugin-spec.md  adk-sim-v2-prd.md  claude-agent-skills-research.md  migration-plan-doc.md  oidc-failures-research-doc.md  release-best-practices-research-report.md  tdd.md
docs/developers/: publishing.md
docs/developers/angular/: angular-architecture-practices.md  angular-testing-research.md
frontend/: .gitignore  CLAUDE.md  angular.json  eslint.config.js  package-lock.json  package.json  playwright-ct.config.ts  playwright.config.ts  proxy.conf.docker.json  proxy.conf.json  sheriff.config.ts  tsconfig.ct.json  tsconfig.e2e.json  tsconfig.json  tsconfig.spec.json
frontend/playwright/: index.html  index.ts  styles.css  styles.scss
frontend/src/: styles.scss  theme.scss
frontend/src/app/: app.config.ts  app.html  app.routes.ts  app.scss  app.spec.ts  app.ts
frontend/src/environments/: environment.prod.ts  environment.ts
frontend/test-results/: .last-run.json
frontend/tests/component/: connection-status.spec.ts  control-panel.spec.ts  (+12 more)
mddocs/: .mddocsignore  CLAUDE.md  README.md  prd.md  tdd.md
mddocs/development/: devplatform.md  implementation-tips.md  pre-commit-proposal.md
mddocs/frontend/: frontend-spec.md  frontend-tdd.md
mddocs/plugins/: adk-sim-java-plugin-spec.md  adk-sim-python-plugin-spec.md
mddocs/sprints/: sprint-7-plan.md  sprint7-review.md
ops/: pyproject.toml
ops/src/ops/: __init__.py  cli.py
ops/src/ops/commands/: __init__.py  build.py  ci.py  dev.py  docker.py  quality.py  release.py  test.py  trace.py
ops/src/ops/core/: __init__.py  console.py  git.py  github.py  jj.py  paths.py  process.py
plugins/python/: pyproject.toml
plugins/python/src/adk_agent_sim/: __init__.py
plugins/python/src/adk_agent_sim/plugin/: converter.py  core.py
plugins/python/tests/: __init__.py  conftest.py
plugins/python/tests/integration/: conftest.py  helpers.py
plugins/python/tests/unit/: test_betterproto_patch.py  test_client_factory.py  test_converter.py  test_futures.py  test_plugin.py
protos/: CLAUDE.md
scripts/: allpaste_frontend.sh  allpaste_overview.sh  build.sh  bump_version.py  check-generated.sh  check_quality.sh  configure_github.sh  gen_protos.sh  get_next_version.py  presubmit.sh  ship.sh  should-run-e2e.sh  sync_versions.py  update_vendored_protos.sh
server/: CLAUDE.md  pyproject.toml  pyrightconfig.json
server/src/adk_sim_server/: __init__.py  broadcaster.py  main.py  queue.py  web.py
server/src/adk_sim_server/persistence/: database.py  session_repo.py
server/src/adk_sim_server/services/: simulator_service.py
server/tests/: __init__.py  conftest.py
server/tests/e2e/: conftest.py  response_helpers.py  test_flow_e2e.py  test_plugin_integration.py  test_session_e2e.py  test_smoke.py  test_tool_execution.py
server/tests/unit/: __init__.py  test_broadcaster.py  test_main.py  test_queue.py  test_session_manager.py  test_session_repo.py  test_simulator_service.py
server/tests/unit/persistence/: test_database.py  test_event_repo.py
specs/001-server-plugin-core/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/002-web-ui/: spec.md
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  conftest.py  response_helpers.py  simulated_human.py  test_flow_e2e.py  test_plugin_integration.py  test_session_e2e.py  test_smoke.py  test_tool_execution.py
tests/fixtures/: __init__.py  fake_event_repo.py  fake_session_repo.py
tests/integration/: helpers.py
tests/unit/: adk_helpers.py  conftest.py  test_betterproto_patch.py
(+222 files in other folders)
