[project]
name = "adk-sim-workspace"
version = "0.1.0"
description = "ADK Agent Simulator - Workspace Root"
readme = "README.md"
requires-python = ">=3.14"

[dependency-groups]
dev = [
    "adk-sim-protos",
    "adk-sim-testing",
    "adk-sim-server",
    "adk-agent-sim",
    "betterproto[compiler]>=2.0.0b7",
    "grpcio-tools>=1.60.0",
    "ipykernel>=7.1.0",
    "pyright>=1.1.407",
    "ruff>=0.14.7",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-docker>=3.0.0",
    "pytest-timeout>=2.4.0",
    "pyhamcrest>=2.1.0",
    "specify-cli>=1.0.0",
    "tomlkit>=0.13.0",
    "watchfiles>=1.0.0",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["server", "plugins/python", "packages/adk-sim-protos", "packages/adk-sim-testing"]

[tool.uv.sources]
adk-sim-protos = { workspace = true }
adk-sim-testing = { workspace = true }
adk-sim-server = { workspace = true }
adk-agent-sim = { workspace = true }

[tool.ruff]
target-version = "py314"
line-length = 88
indent-width = 2

[tool.ruff.lint]
select = [
    # --- Essentials ---
    "E",    # pycodestyle (standard python style errors)
    "F",    # Pyflakes (finds logical errors, unused variables/imports)
    "I",    # isort (sorts imports automatically)
    
    # --- Modernization ---
    "UP",   # pyupgrade (upgrades syntax to modern Python 3.14 standards)
    "FURB", # Refurb (modernizes and refactors code using newer stdlib features)
    
    # --- Code Quality & Logic ---
    "SIM",  # flake8-simplify (suggests logical simplifications)
    "B",    # flake8-bugbear (finds likely bugs and design problems)
    "C4",   # flake8-comprehensions (improves list/dict/set comprehensions)
    "RET",  # flake8-return (checks for unnecessary return logic/branching)
    "RUF",  # Ruff-specific rules (ambiguous characters, static keys, etc.)
    
    # --- Specific Enforcements ---
    "TC",   # flake8-type-checking (moves imports to 'if TYPE_CHECKING' blocks)
    "TID",  # flake8-tidy-imports (we use this to ban __future__ and old typing)
    
    # --- Safety & Async ---
    "ASYNC", # flake8-async (prevents blocking calls in async functions)
    "DTZ",   # flake8-datetimez (bans naive datetimes to prevent timezone bugs)
    "PERF",  # Perflint (checks for performance anti-patterns)
    
    # --- Testing ---
    "PT",    # flake8-pytest-style (enforces consistent pytest fixture/assert style)
]

[tool.ruff.lint.per-file-ignores]
# IGNORE generated files for all these new strict rules
"packages/adk-sim-protos/src/adk_sim_protos/adksim/**" = [
    "E501",
    "UP",
    "TC",
    "TID",
    "B",
    "SIM",
    "RUF",
    "FURB",
    "ASYNC",
    "PT",
    "RET",
    "PERF",
    "C4",
    "DTZ",
]
"packages/adk-sim-protos/src/adk_sim_protos/google/**" = [
    "E501",
    "UP",
    "TC",
    "TID",
    "B",
    "SIM",
    "RUF",
    "FURB",
    "ASYNC",
    "PT",
    "RET",
    "PERF",
    "C4",
    "DTZ",
]

# Common test-specific ignores
# S101: "Use of assert detected" (flake8-bandit) - asserts are normal in tests
"tests/**" = ["S101"] 

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"__future__.annotations".msg = "Python 3.14+ deferred evaluation is standard. Do not use future import."
"typing.List".msg = "Use builtin `list` instead."
"typing.Dict".msg = "Use builtin `dict` instead."
"typing.Tuple".msg = "Use builtin `tuple` instead."
"typing.Union".msg = "Use `|` operator instead."
"typing.Optional".msg = "Use `X | None` instead."

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
include = ["server/src", "server/tests", "plugins/python/src", "plugins/python/tests", "packages/*/src"]
exclude = [
    "packages/adk-sim-protos/src/adk_sim_protos/adksim",
    "packages/adk-sim-protos/src/adk_sim_protos/google",
    "**/node_modules",
    "**/__pycache__",
]
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnusedImport = false

# Allow tests to access private members for verification
[[tool.pyright.executionEnvironments]]
root = "server/tests"
reportPrivateUsage = false

[[tool.pyright.executionEnvironments]]
root = "plugins/python/tests"
reportPrivateUsage = false

[tool.pytest.ini_options]
testpaths = ["server/tests", "plugins/python/tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "e2e: End-to-end tests that require Docker Compose services",
    "integration: marks tests as integration tests (require API keys, slower)",
]
filterwarnings = [
    "ignore::DeprecationWarning:google.protobuf.*",
]
