[project]
name = "ops"
version = "0.1.0"
description = "Developer CLI for adk-sim-plugin"
requires-python = ">=3.14"
dependencies = [
  "typer>=0.15.0",
  "rich>=13.0.0",
  "tomlkit>=0.13.0",
]

[project.scripts]
ops = "ops.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ops"]
