[project]
name = "fomc-research"
version = "0.1.0"
description = "FOMC Research Agent Demo using Google ADK"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "Mike Styer", email = "styer@google.com" }]
requires-python = ">=3.14"
dependencies = [
    "absl-py>=2.2.1",
    "adk-agent-sim",
    "diff-match-patch>=20241021",
    "google-adk>=1.0.0",
    "google-cloud-aiplatform[adk,agent-engines]>=1.93.0",
    "google-cloud-bigquery>=3.30.0",
    "google-genai>=1.5.0",
    "pdfplumber>=0.11.5",
    "pydantic>=2.10.6",
    "httpx>=0.28.0",
    "scikit-learn>=1.6.1",
    "tabulate>=0.9.0",
]

[tool.uv.sources]
adk-agent-sim = { path = "../../plugins/python", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fomc_research"]
