[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adk-agent-sim"
version = "0.1.0"
description = "ADK Agent Simulator Plugin for Google ADK"
requires-python = ">=3.14"
dependencies = [
  "adk-sim-protos",
  "google-adk>=1.21.0",
  "grpclib>=0.4.7",
]

[dependency-groups]
dev = [
  "adk-sim-testing",
  "pytest>=9.0.1",
  "pytest-asyncio>=1.3.0",
  "pyhamcrest>=2.1.0",
  "pyright>=1.1.407",
]

[tool.uv.sources]
adk-sim-protos = { workspace = true }
adk-sim-testing = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/adk_agent_sim"]
